feat: poison hearbeats
