# config/routes.rb
@@ -297,6 +297,10 @@ Rails.application.routes.draw do
         post "user/search_fuzzy", to: "admin#search_users_fuzzy"
         post "user/convict", to: "admin#user_convict"
 
+        get "ban/:hackatime_id", to: "bans#show", as: :ban
+        post "ban/:hackatime_id", to: "bans#create", as: :create_ban
+        delete "ban/:hackatime_id", to: "bans#destroy", as: :unban
+
         # Admin API Keys management
         resources :admin_api_keys, only: [ :index, :show, :create, :destroy ]
 
